--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "hello",
+  "name": "mddmc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-responsive-carousel": "^3.1.41",
     "react-router": "^3.2.1",
     "react-scripts": "1.1.4"
   },
